# gollek

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  go.mod  go.sum  pom.xml  provider-spi.md
adapter/: README.md  pom.xml
app/: app.go
bak-wayang-inference/: pom.xml
bom/: pom.xml
configs/: config.example.yaml  config.yaml
core/: README.md  pom.xml
docs/: INDEX.md  architecture  bench-multilora-zipf.md  benchmark-operations-runbook.md  enhanced-architecture  enhancement-2.md  error-codes.md  kernel-architecture.md  libtorch-cuda-advanced-roadmap.md  new_architecture.md  promp.md  prompt-2.md  prompt3.md  quick-start-enhanced-arch.md
extension/: README.md  pom.xml
extension/format/libtorch/src/main/java/io/quarkus/pytorch/: CMakeLists.txt  Functional.java  LibTorchFFM.java  Linear.java  Module.java  Optimizer.java  PROJECT_SUMMARY.md  README.md  SGD.java  ScalarType.java  Sequential.java  pom.xml  pytorch_java_ffm.cpp  pytorch_java_ffm.h
extension/format/libtorch/src/main/java/io/quarkus/pytorch/binding/: LibTorchFFM.java
extension/format/libtorch/src/main/java/io/quarkus/pytorch/core/: Device.java  Tensor.java
extension/format/libtorch/src/main/java/io/quarkus/pytorch/examples/: AdvancedCNN.java  EndToEndExample.java  MNISTNet.java
extension/format/libtorch/src/main/java/io/quarkus/pytorch/nn/: BatchNorm2d.java  Conv2d.java  Dropout.java  Linear.java  Module.java  Sequential.java
extension/format/libtorch/src/main/java/io/quarkus/pytorch/nn/functional/: Loss.java
extension/format/libtorch/src/main/java/io/quarkus/pytorch/optim/: Adam.java  Optimizer.java  SGD.java
extension/format/libtorch/src/main/java/io/quarkus/pytorch/rest/: MLInferenceResource.java
include/: CMakeLists.txt
inference/: README.md  pom.xml
llama/: batch.go  cgo.go  chat.go  context.go  infer.go  llama.go  llama.md  memory.go  model.go  perf.go  sampler.go  tokenizer.go  types.go  vocab.go  zzz
plugins/: pom.xml
provider/: README.md  pom.xml
scripts/: bench-multilora-zipf.sh  build-cpu.sh  build-gpu-cuda.sh  build-metal.sh  generate-error-codes.sh  prepare-llama-source.sh  (+1 more)
(+2117 files in other folders)
